<resources>
    <string name="app_name">KumparanApp</string>
    <string name="user_name">User Name</string>
    <string name="company_name">Company Name</string>
    <string name="title">Title</string>
    <string name="body">body</string>
    <string name="no_internet_connectivity">No Connection</string>
    <string name="try_again">Try Again</string>
    <string name="comments">Comments</string>
    <string name="author_name">Author Name</string>
    <string name="body_comment">Body Comment</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="album">Album</string>
    <string name="splash_screen">Splash Screen</string>
</resources>